# CodingExercises

./: .gitignore  readme.md
AdventOfCode/Aoc2020/: Cargo.toml
AdventOfCode/aoc2021/: Cargo.toml
AdventOfCode/aoc2021/data/: day24_input.txt
AdventOfCode/aoc2021/src/: main.rs
AdventOfCode/aoc2022/: Cargo.toml
AdventOfCode/aoc2022/src/: lib.rs
AdventOfCode/aoc2023/: Cargo.toml
AdventOfCode/aoc2024_rs/: Cargo.toml
AdventOfCode/aoc2024_rs/src/: lib.rs
AdventOfCode/aoc2025_rs/: Cargo.toml
AdventOfCode/aoc2025_rs/src/: lib.rs
CTCI/CSharp/: AndrewTweddle.CodingExercises.CTCI.sln
CTCI/CSharp/AndrewTweddle.CodingExercises.CTCI/: AndrewTweddle.CodingExercises.CTCI.csproj  AndrewTweddle.CodingExercises.CTCI.sln
CTCI/CSharp/AndrewTweddle.CodingExercises.CTCI.Tests/: AndrewTweddle.CodingExercises.CTCI.Tests.csproj
CTCI/Scala/: build.sbt
CTCI/Scala/project/: build.properties
Katas/CodingDojo/Bowling/: readme.md
Katas/CodingDojo/RomanNumerals/: README.md
Katas/CodingDojo/roman_numerals/: Cargo.toml
Katas/CodingDojo/roman_numerals/src/: main.rs
Katas/src/: Katas.sln
cryptopals/: Cargo.toml
cryptopals/set1/: Cargo.toml
cryptopals/set1/proptest-regressions/: base64.txt  lib.txt
cryptopals/set1/src/: base64.rs  ciphers.rs  hex.rs  lib.rs  main.rs
cryptopals/src/: base64.rs  ciphers.rs  hex.rs  lib.rs
cryptopals/src/ciphers/: repeating_key_xor.rs
cses_rust/: Cargo.toml
misc/WordRectangles/: readme.md
misc/WordRectangles/C++/: CMakeLists.txt  (+1 more)
project_euler/: Cargo.toml
project_euler/docs/: problem71.typ
project_euler/src/: lib.rs
(+123 files in other folders)
