[package]
name = "project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
num-bigint = "0.4.0"
rayon = "1.5.0"
proptest = "1.0.0"
num = "0.4.0"
