[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nalgebra = "0.30.0"
num = "0.4.1"
pathfinding = "4.8.2"
petgraph = { version = "0.6.4", features = [] }