[package]
name = "roman_numerals"
version = "0.1.0"
authors = ["Andrew Tweddle <AndrewTweddle@fakeEMail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"